feat: Add redis to test the connection via backend
